[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm[toml]>=6.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "kiss3"
description = "A pure-Python implementation of serial KISS and KISS-over-TCP protocols for communicating with TNC devices"
authors = [
    {name = "Masen Furer KF7HVM", email = "kf7hvm@0x26.net"},
    {name = "Greg Albrecht W2GMD", email = "oss@undef.net"}
]
dependencies = [
    "pyserial > 3.4.0",
    "bitarray > 2.5.0",
    "attrs > 20"
]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Communications :: Ham Radio",
    "Programming Language :: Python",
    "License :: OSI Approved :: Apache Software License"
]
keywords=[
    'Ham Radio', 'APRS', 'KISS'
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/python-aprs/kiss3"

[tool.setuptools_scm]